# copy-yamusic-bot

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: deploy-miniapp.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  middleware.py
backend/app/api/routes/: albums.py  artists.py  search.py  tracks.py  uploads.py  users.py  wave.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/models/: __init__.py  download_log.py  uploaded_track.py  user.py
backend/app/services/: cache_service.py  download_service.py  flac_downloader.py  search_service.py  upload_service.py  user_service.py  yandex_music.py
backend/bot/: main.py
backend/bot/handlers/: download.py  search.py  settings.py  start.py
backend/database/: session.py
backend/database/migrations/: env.py
backend/database/migrations/versions/: 001_initial.py
docs/: python-project-structure.md  telegram-mini-app-docs.md
miniapp/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
miniapp/src/: App.tsx
miniapp/src/api/: client.ts
miniapp/src/components/: AlbumCard.tsx  ArtistCard.tsx  GlassPanel.tsx  NavBar.tsx  Player.tsx  QualityPicker.tsx  TrackCard.tsx
miniapp/src/hooks/: useApi.ts  useTelegram.ts
miniapp/src/pages/: Album.tsx  Artist.tsx  Downloads.tsx  Home.tsx  Search.tsx  Settings.tsx  Track.tsx  Upload.tsx  Wave.tsx
miniapp/src/store/: playerStore.ts
nginx/: default.conf
scripts/: tunnel.bat  tunnel.sh
(+1 files in other folders)
